# Heuris-BioMCP

./: .env.example  .gitignore  LICENSE  Procfile  README.md  ci.yml  claude_desktop_config_snippet.json  mypy-ci.ini  new_crispr_tools.py  new_variant_interpreter.py  pyproject.toml  render.yaml  server_additions.py
.github/workflows/: ci.yml
src/biomcp/: __init__.py  __main__.py  server.py
src/biomcp/core/: __init__.py  entity_resolver.py  knowledge_graph.py  query_planner.py
src/biomcp/tools/: __init__.py  advanced.py  crispr_tools.py  databases.py  drug_safety.py  extended_databases.py  innovations.py  intelligence.py  ncbi.py  nvidia_nim.py  pathways.py  proteins.py  protocol_generator.py  strategy_surface.py  variant_interpreter.py  verify.py
src/biomcp/utils/: __init__.py
tests/: conftest.py  test_advanced.py  test_biomcp.py  test_crispr_tools.py  test_drug_safety.py  test_extended_databases.py  test_innovations.py  test_ncbi.py  test_pathways.py  test_proteins.py  test_server.py  test_strategy_surface.py  test_utils.py  test_variant_interpreter.py  test_verify.py
