[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biomcp"
version = "1.0.0"
description = "BioMCP — The most comprehensive MCP server for Bioinformatics, Computational Biology, Drug Discovery, Neuroimaging & Multi-Omics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "BioMCP Contributors" }]
keywords = [
    "mcp", "bioinformatics", "computational-biology", "claude",
    "anthropic", "drug-discovery", "genomics", "proteomics",
    "alphafold", "ncbi", "pubmed", "uniprot", "kegg",
    "single-cell", "rna-seq", "neuroimaging", "multi-omics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "biopython>=1.83",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "aiofiles>=23.2.1",
    "cachetools>=5.3.3",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "xmltodict>=0.13.0",
    "anyio>=4.3.0",
]

[project.optional-dependencies]
neuroimaging = [
    "nibabel>=5.2.0",
    "nilearn>=0.10.3",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
biomcp = "biomcp.server:main"

[project.urls]
Homepage = "https://github.com/biomcp/biomcp"
Documentation = "https://biomcp.readthedocs.io"
Repository = "https://github.com/biomcp/biomcp"
"Bug Tracker" = "https://github.com/biomcp/biomcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/biomcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
